otherformats/src/main/java/org/semanticweb/owlapi6/krss1/parser/KRSSParser.java
/* KRSSParser.java */
/* Generated By:JavaCC: Do not edit this line. KRSSParser.java */
package org.semanticweb.owlapi6.krss1.parser;

import org.semanticweb.owlapi6.model.*;
import org.semanticweb.owlapi6.vocab.Namespaces;
import java.net.*;
import java.util.*;

@SuppressWarnings("all")
class KRSSParser implements KRSSParserConstants {
    private OWLOntology ontology;
    private OWLDataFactory df;
    private Map<String, IRI> string2IRI;
    private boolean ignoreAnnotationsAndDeclarations = false;
    private String base;

    public KRSSParser setOntology(OWLOntology ontology) {
        this.ontology = ontology;
        this.df = ontology.getOWLOntologyManager().getOWLDataFactory();
        string2IRI = new HashMap<String, IRI>();
        if (ontology.isNamed()) {
            base = ontology.getOntologyID().getOntologyIRI() + "#";
        } else {
            base = Namespaces.OWL.toString();
        }
        return this;
    }

    protected void addAxiom(OWLAxiom ax) throws KRSSOWLParserException {
      if (ax == null) { return; }
        try {
            ontology.addAxiom(ax);
        }
        catch(OWLOntologyChangeException e) {
            throw new KRSSOWLParserException(e);
        }
    }

    public IRI getIRI(String s) {
        s = base + s;
        IRI iri = string2IRI.get(s);
        if(iri == null) {
            iri = df.getIRI(s);
            string2IRI.put(s, iri);
        }
        return iri;
    }

    public void setIgnoreAnnotationsAndDeclarations(boolean b) {
        ignoreAnnotationsAndDeclarations = b;
    }

  final public void parse() throws ParseException, KRSSOWLParserException {OWLAxiom ax;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      ax = TBoxStatement();
addAxiom(ax);
    }
    if (jj_2_2(2)) {
      jj_consume_token(ENDTBOX);
    } else {
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPENPAR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      ABoxStatement();
    }
    if (jj_2_3(2)) {
      jj_consume_token(ENDABOX);
    } else {
      ;
    }
    jj_consume_token(0);
}

  final public OWLAxiom TBoxStatement() throws ParseException {OWLAxiom ax;
    if (jj_2_4(2)) {
      ax = DefinePrimitiveConcept();
    } else if (jj_2_5(2)) {
      ax = DefineConcept();
    } else if (jj_2_6(2)) {
      ax = DefinePrimitiveRole();
    } else if (jj_2_7(2)) {
      ax = Transitive();
    } else if (jj_2_8(2)) {
      ax = Range();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
return ax;
}

  final public OWLAxiom DefinePrimitiveConcept() throws ParseException {OWLClassExpression subClass;
    OWLClassExpression superClass;
    jj_consume_token(OPENPAR);
    jj_consume_token(DEFINEPRIMITIVECONCEPT);
    subClass = ConceptName();
    superClass = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLSubClassOfAxiom(subClass, superClass);
}

  final public OWLAxiom DefineConcept() throws ParseException {OWLClassExpression clsA;
    OWLClassExpression clsB;
    jj_consume_token(OPENPAR);
    jj_consume_token(DEFINECONCEPT);
    clsA = ConceptName();
    clsB = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLEquivalentClassesAxiom(clsA, clsB);
}

  final public OWLAxiom DefinePrimitiveRole() throws ParseException {OWLObjectProperty subProp;
    OWLObjectProperty superProp;
    OWLAxiom ax = null;
    jj_consume_token(OPENPAR);
    jj_consume_token(DEFINEPRIMITIVEROLE);
    subProp = RoleName();
    superProp = RoleName();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 42:{
      jj_consume_token(42);
      RoleName();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(CLOSEPAR);
if(superProp != null) {
            ax = df.getOWLSubObjectPropertyOfAxiom(subProp, superProp);
        }
        return ax;
}

  final public OWLAxiom Transitive() throws ParseException {OWLObjectProperty prop;
    jj_consume_token(OPENPAR);
    jj_consume_token(TRANSITIVE);
    prop = RoleName();
    jj_consume_token(CLOSEPAR);
return df.getOWLTransitiveObjectPropertyAxiom(prop);
}

  final public OWLAxiom Range() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression rng;
    jj_consume_token(OPENPAR);
    jj_consume_token(RANGE);
    prop = RoleName();
    rng = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectPropertyRangeAxiom(prop, rng);
}

  final public OWLClassExpression ConceptExpression() throws ParseException {OWLClassExpression desc;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NAME:{
      desc = ConceptName();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      if (jj_2_9(2)) {
        desc = And();
      } else if (jj_2_10(2)) {
        desc = Or();
      } else if (jj_2_11(2)) {
        desc = Not();
      } else if (jj_2_12(2)) {
        desc = All();
      } else if (jj_2_13(2)) {
        desc = Some();
      } else if (jj_2_14(2)) {
        desc = AtLeast();
      } else if (jj_2_15(2)) {
        desc = AtMost();
      } else if (jj_2_16(2)) {
        desc = Exactly();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
return desc;
}

  final public OWLClassExpression ConceptName() throws ParseException {IRI iri;
    iri = Name();
return df.getOWLClass(iri);
}

  final public Set<OWLClassExpression> ConceptSet() throws ParseException {Set<OWLClassExpression> descs = new HashSet<OWLClassExpression>();
    OWLClassExpression desc;
    label_3:
    while (true) {
      desc = ConceptExpression();
descs.add(desc);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPENPAR:
      case NAME:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
    }
return descs;
}

  final public OWLClassExpression And() throws ParseException {Set<OWLClassExpression> operands;
    jj_consume_token(OPENPAR);
    jj_consume_token(AND);
    operands = ConceptSet();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectIntersectionOf(operands);
}

  final public OWLClassExpression Or() throws ParseException {Set<OWLClassExpression> operands;
    jj_consume_token(OPENPAR);
    jj_consume_token(OR);
    operands = ConceptSet();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectUnionOf(operands);
}

  final public OWLClassExpression Not() throws ParseException {OWLClassExpression operand;
    jj_consume_token(OPENPAR);
    jj_consume_token(NOT);
    operand = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectComplementOf(operand);
}

  final public OWLClassExpression All() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression filler;
    jj_consume_token(OPENPAR);
    jj_consume_token(ALL);
    prop = RoleName();
    filler = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectAllValuesFrom(prop, filler);
}

  final public OWLClassExpression Some() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression filler;
    jj_consume_token(OPENPAR);
    jj_consume_token(SOME);
    prop = RoleName();
    filler = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectSomeValuesFrom(prop, filler);
}

  final public OWLClassExpression AtLeast() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression filler;
    int card;
    jj_consume_token(OPENPAR);
    jj_consume_token(ATLEAST);
    card = Integer();
    prop = RoleName();
    filler = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectMinCardinality(card, prop, filler);
}

  final public OWLClassExpression AtMost() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression filler;
    int card;
    jj_consume_token(OPENPAR);
    jj_consume_token(ATMOST);
    card = Integer();
    prop = RoleName();
    filler = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectMaxCardinality(card, prop, filler);
}

  final public OWLClassExpression Exactly() throws ParseException {OWLObjectProperty prop;
    OWLClassExpression filler;
    int card;
    jj_consume_token(OPENPAR);
    jj_consume_token(EXACTLY);
    card = Integer();
    prop = RoleName();
    filler = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectExactCardinality(card, prop, filler);
}

  final public OWLObjectProperty RoleName() throws ParseException {IRI iri;
    iri = Name();
return df.getOWLObjectProperty(iri);
}

  final public OWLAxiom ABoxStatement() throws ParseException {OWLAxiom ax;
    if (jj_2_17(2)) {
      ax = Instance();
    } else if (jj_2_18(2)) {
      ax = Related();
    } else if (jj_2_19(2)) {
      ax = Equal();
    } else if (jj_2_20(2)) {
      ax = Distinct();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
return ax;
}

  final public OWLAxiom Instance() throws ParseException {OWLIndividual ind;
    OWLClassExpression type;
    jj_consume_token(OPENPAR);
    jj_consume_token(INSTANCE);
    ind = IndividualName();
    type = ConceptExpression();
    jj_consume_token(CLOSEPAR);
return df.getOWLClassAssertionAxiom(type, ind);
}

  final public OWLAxiom Related() throws ParseException {OWLIndividual subj;
    OWLObjectProperty prop;
    OWLIndividual obj;
    jj_consume_token(OPENPAR);
    jj_consume_token(RELATED);
    subj = IndividualName();
    prop = RoleName();
    obj = IndividualName();
    jj_consume_token(CLOSEPAR);
return df.getOWLObjectPropertyAssertionAxiom(prop, subj, obj);
}

  final public OWLAxiom Equal() throws ParseException {OWLIndividual indA, indB;
    jj_consume_token(OPENPAR);
    jj_consume_token(EQUAL);
    indA = IndividualName();
    indB = IndividualName();
    jj_consume_token(CLOSEPAR);
return df.getOWLSameIndividualAxiom(indA, indB);
}

  final public OWLAxiom Distinct() throws ParseException {OWLIndividual indA, indB;
    jj_consume_token(OPENPAR);
    jj_consume_token(DISTINCT);
    indA = IndividualName();
    indB = IndividualName();
    jj_consume_token(CLOSEPAR);
return df.getOWLDifferentIndividualsAxiom(indA, indB);
}

  final public OWLIndividual IndividualName() throws ParseException {IRI name;
    name = Name();
return df.getOWLNamedIndividual(name);
}

  final public IRI Name() throws ParseException {Token t;
    t = jj_consume_token(NAME);
return getIRI(t.image);
}

  final public int Integer() throws ParseException {Token t;
    t = jj_consume_token(INT);
return Integer.parseInt(t.image);
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_3_9()
 {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(EQUAL)) return true;
    return false;
  }

  private boolean jj_3R_19()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(RELATED)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(ENDTBOX)) return true;
    return false;
  }

  private boolean jj_3R_9()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(RANGE)) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(INSTANCE)) return true;
    return false;
  }

  private boolean jj_3R_8()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(TRANSITIVE)) return true;
    return false;
  }

  private boolean jj_3_17()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3R_7()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(DEFINEPRIMITIVEROLE)) return true;
    return false;
  }

  private boolean jj_3R_17()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(EXACTLY)) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(ATMOST)) return true;
    return false;
  }

  private boolean jj_3R_6()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(DEFINECONCEPT)) return true;
    return false;
  }

  private boolean jj_3_20()
 {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3R_5()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(DEFINEPRIMITIVECONCEPT)) return true;
    return false;
  }

  private boolean jj_3R_15()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(ATLEAST)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3R_14()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(SOME)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_4()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(ENDABOX)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_13()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(ALL)) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(NOT)) return true;
    return false;
  }

  private boolean jj_3R_11()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(OR)) return true;
    return false;
  }

  private boolean jj_3R_10()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(OPENPAR)) return true;
    if (jj_scan_token(DISTINCT)) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_3R_11()) return true;
    return false;
  }
